Revert "fix: fixed misalignment of year selector on homepage due to responsive design implementation"
This reverts commit 08e53e4db0976f43d1157ca11766e760b620f94f.

--- a/src/static/charts.css
+++ b/src/static/charts.css
@@ -1,8 +1,3 @@
-.chart-container {
-    display: flex;
-    flex-direction: column;
-}
-
 .chart-container .select input,
 .chart-container .select select {
     float: right;
@@ -38,14 +33,10 @@
     opacity: 0;
 }
 
-/* Media queries for wider screens */
-@media (min-width: 800px) {
+
+/* Media query for wider screens */
+@media (min-width: 768px) {
     .chart-container .chart {
         width: calc(50% - 10px); /* Two charts per row */
-    }
-}
-@media (min-width: 1600px) {
-    .chart-container .chart {
-        width: calc(25% - 10px); /* Four charts per row */
     }
 }
